# triton

./: .gitignore  .gitmodules  BUILD  CMakeLists.txt  Dockerfile  README.md  README_a8w8.md  cache  dump.txt  shuffle_test.py  triton_rocm_20-52.Dockerfile
.github/: release-pinned-commit.txt
.github/scripts/: build_triton_wheel.py  fix_so.sh
.github/workflows/: amd-offline-tests.yml  amd-tests.yml  amd_perf_kernel_Integration_tests.yml  amd_perf_kernel_nightly_tests.yml  amd_perf_kernel_postmerge_tests.yml  integration-tests-dot-rocMLIR.yml  integration-tests.yml  main.yml  test-backends.yml  wheels-rocm.yml
.tmp/152c675d43cb808dbb46ef7be6270606/: kernel_dot.hsaco_path  kernel_dot.ttgir
backend/: compiler.py  driver.py
cache/8ddf930f73812c7ef3bf24362c2ea592/: _attn_fwd.amdgcn  _attn_fwd.hsaco_path  _attn_fwd.json  _attn_fwd.llir  _attn_fwd.ttgir  _attn_fwd.ttir
cache/_attn_fwd_0d1d2d34d5d6de7de8de9c10de11de12de13c14de15de16de17c18de19de20de21c2223de24de.kd_v0_ui/: code.json  filenames.json  graph_options.json  occupancy.json  se0_info.json  se0_sm0_sl0_wv0.json  se0_sm0_sl0_wv1.json  se0_sm0_sl0_wv2.json  se0_sm0_sl0_wv3.json  se0_sm0_sl0_wv4.json  se0_sm0_sl0_wv5.json  se0_sm0_sl0_wv6.json  se0_sm0_sl0_wv7.json  se0_sm0_sl0_wv8.json  se0_sm0_sl0_wv9.json  se0_sm0_sl1_wv0.json  se0_sm0_sl1_wv1.json  se0_sm0_sl1_wv2.json  se0_sm0_sl1_wv3.json  se0_sm0_sl1_wv4.json  se0_sm0_sl1_wv5.json  se0_sm0_sl1_wv6.json  se0_sm0_sl1_wv7.json  se0_sm0_sl1_wv8.json  se0_sm0_sl1_wv9.json  se0_sm1_sl0_wv0.json  se0_sm1_sl0_wv1.json  se0_sm1_sl0_wv2.json  se0_sm1_sl0_wv3.json  se0_sm1_sl0_wv4.json  se0_sm1_sl0_wv5.json  se0_sm1_sl0_wv6.json  se0_sm1_sl0_wv7.json  se0_sm1_sl0_wv8.json  se0_sm1_sl0_wv9.json  se0_sm1_sl1_wv0.json  se0_sm1_sl1_wv1.json  se0_sm1_sl1_wv2.json  se0_sm1_sl1_wv3.json  se0_sm1_sl1_wv4.json  (+953 more)
cache/bd4c2adeb50c390722446803214adba4/: __grp__tmp97l7xw4x.json  tmp97l7xw4x.amdgcn  tmp97l7xw4x.hsaco_path  tmp97l7xw4x.json  tmp97l7xw4x.llir
cache/cfa173f24c802f0d6265ade6bf798d47/: _attn_fwd.amdgcn  _attn_fwd.hsaco_path  _attn_fwd.json  _attn_fwd.llir  _attn_fwd.ttgir  _attn_fwd.ttir
cache/dcc7ea3b930332cf2133c34e11424526/: _attn_fwd.amdgcn  _attn_fwd.hsaco_path  _attn_fwd.json  _attn_fwd.llir  _attn_fwd.ttgir  _attn_fwd.ttir
cache/de33d2fef7c7eb8ecffc1bc09cfe9faf/: __grp__tmp1y3x2w9o.json  __grp__tmphjwgd5mu.json  tmp1y3x2w9o.hsaco_path  tmphjwgd5mu.amdgcn  tmphjwgd5mu.hsaco_path  tmphjwgd5mu.llir
cache/e4bba082d733acc03b328fce2bf84575/: _attn_fwd.amdgcn  _attn_fwd.hsaco_path  _attn_fwd.json  _attn_fwd.llir  _attn_fwd.ttgir
cache/f252c6f1ab352bc440e54d94ecf492ba/: _attn_fwd.amdgcn  _attn_fwd.hsaco_path  _attn_fwd.json  _attn_fwd.llir  _attn_fwd.ttgir  _attn_fwd.ttir
include/: CMakeLists.txt
include/TritonGPUToLLVM/: CMakeLists.txt
include/TritonGPUTransforms/: CMakeLists.txt  Passes.h  Passes.td
lib/: CMakeLists.txt
lib/Analysis/: Alias.cpp  Allocation.cpp  AxisInfo.cpp  Membar.cpp  Utility.cpp
lib/Conversion/: CMakeLists.txt
lib/TritonAMDGPUToLLVM/: BarrierOpToLLVM.cpp  ConvertLayoutOpToLLVM.cpp  DotOpToLLVM.cpp  ElementwiseOpToLLVM.cpp  LoadStoreOpToLLVM.cpp  LoadStoreOpToLLVM.h  ReduceOpToLLVM.cpp  ScanOpToLLVM.cpp  TritonGPUToLLVM.cpp  TritonGPUToLLVMBase.h  TritonGPUToLLVMPass.cpp  Utility.cpp  Utility.h  ViewOpToLLVM.cpp
lib/TritonAMDGPUTransforms/: CMakeLists.txt  DecomposeConversions.cpp  OptimizeEpilogue.cpp  RemoveLayoutConversions.cpp  ReorderInstructions.cpp
lib/TritonGPUToLLVM/: CMakeLists.txt  ConvertLayoutOpToLLVM.cpp  DotOpToLLVM.cpp  ElementwiseOpToLLVM.cpp  LoadStoreOpToLLVM.cpp  ReduceOpToLLVM.cpp  TritonGPUToLLVMBase.h  TritonGPUToLLVMPass.cpp  TypeConverter.cpp  Utility.h
lib/TritonGPUToLLVM/ConvertLayoutOpToLLVM/: SharedToDotOperandMMAv1.cpp  SharedToDotOperandMMAv2.cpp
lib/TritonGPUToLLVM/DotOpToLLVM/: MFMA.cpp  MMAv1.cpp  MMAv2.cpp  WGMMA.cpp
lib/TritonGPUTransforms/: AccelerateAMDMatmul.cpp  AccelerateMatmul.cpp  CMakeLists.txt  DecomposeConversions.cpp  OptimizeDotOperands.cpp  OptimizeEpilogue.cpp  Pipeline.cpp  RemoveLayoutConversions.cpp  StreamPipeline.cpp  Utility.cpp
mathaot/: CMakeLists.txt  Makefile
mathaot/python/: generate_shim.py
python/: 06-attention-decode.py  BUILD  batch_prof.sh  blocksparse-softmax.py  gemm_config.yaml  gemm_tune_outs  main.cc  prof.sh  run.sh  run_2gpu.sh  run_ck_attention.sh  setup.py  triton.cc  tritonProfiler.sh  tune_gemm.py  verify_gemm_perf.py
python/perf-kernels/: 03-matrix-multiplication-all-types.py  03-matrix-multiplication-stream-k.py  03-matrix-multiplication.py  06-attention-decode.py  06-attention-splitk.py  06-attention-splitk_autotune.py  06-attention-splitk_reduce.py  06-attention-splitk_reduce_log.py  06-fused-attention-fwd-transV-fp8.py  06-fused-attention-fwd-transV.py  06-fused-attention-fwd.py  06-fused-attention-sliceQKV.py  06-fused-attention-transV.py  _ref_bwd_split_kernel.py  attention_split_head.py  attention_split_head_unfused.py  attn_torch_function.py  benchmark-fa-fwd-transV-MI300.py  benchmark-flash-attention.py  fa_ttgir.py  flash-attention.py  flash_attention.py  fp8_utils.py  generated_fa_kernel16_16_1024_128.py  one_fa.yaml  persistent-matmul.py  rmsnorm.py  softmax.py  test_op_fwd_varlen.py  tune_fa.py
python/src/: ir.cc  llvm.cc  triton.cc
python/test/: test_fp8_gemm.py  test_rmsnorm.py
python/tests/: test_core_amd.py
python/triton/: __init__.py  compiler.py  testing.py
python/tune_gemm/: tune_gemm.py
python/tutorials/: 01-vector-add.py  02-fused-softmax.py  03-matrix-multiplication.py  05-layer-norm.py  06-fused-attention-split-seqlen.py  06-fused-attention-transV.py  06-fused-attention.py  06-fused-attention_fp8.py  07-extern-functions.py  08-experimental-block-pointer.py  08-reduce-sum.py  11-grouped-gemm.py  fa_fwd.py  (+11 more)
src/: CMakeLists.txt
src/lib/TritonAMDGPUToLLVM/: CMakeLists.txt  ConvertLayoutOpToLLVM.cpp  DotOpToLLVM.cpp  ElementwiseOpToLLVM.cpp  TritonGPUToLLVMBase.h  TypeConverter.cpp
src/lib/TritonAMDGPUTransforms/: CMakeLists.txt
src/python/: triton_amd.cc
test/: BUILD  CMakeLists.txt
unittest/: BUILD
(+374 files in other folders)
